cluster_dump/argocd/Service.argocd-notifications-controller-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"argocd-notifications-controller-metrics"},"name":"argocd-notifications-controller-metrics","namespace":"argocd"},"spec":{"ports":[{"name":"metrics","port":9001,"protocol":"TCP","targetPort":9001}],"selector":{"app.kubernetes.io/name":"argocd-notifications-controller"}}}
  creationTimestamp: "2022-06-21T06:04:04Z"
  labels:
    app.kubernetes.io/name: argocd-notifications-controller-metrics
  name: argocd-notifications-controller-metrics
  namespace: argocd
  resourceVersion: "86921551"
  uid: 354ccc66-7db1-4b7a-80d0-205e6243bcca
spec:
  clusterIP: 10.20.0.133
  clusterIPs:
  - 10.20.0.133
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: metrics
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app.kubernetes.io/name: argocd-notifications-controller
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
